--- a/css/projects.css
+++ b/css/projects.css
@@ -15,7 +15,7 @@
 
 
 .projectsContainer h3 {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
   line-height: 2rem;
   opacity: 0.75;
@@ -169,7 +169,7 @@
   display: flex;
   justify-content: space-between;
   vertical-align: middle;
-  margin-top:10px
+  margin-top:15px
 }
 
 .projectsItem__buttonContainer a {
@@ -177,8 +177,8 @@
   display: flex;
   justify-content: center;
   vertical-align: middle;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 15px;
+  margin-right: 15px;
   background-color: var(--bg-body-dark);
   padding: 8px;
   border-radius: 5px;
@@ -208,9 +208,9 @@
 
 
   .projectsItem {
-  display: inline-block;
+  display: inline-block !important;
   vertical-align: middle;
-  width: 198px;
+  width: 218px;
   height: 260px;
   margin: 7px;
   position: relative;
