--- a/css/skills.css
+++ b/css/skills.css
@@ -10,6 +10,8 @@
  color: var(--color-body);
  min-height: 100vh;
  vertical-align: middle;
+ align-items: center;
+ text-align: center;
  }
 
 
@@ -29,6 +31,8 @@ margin: 15px;
  height: 70vh;
  margin-bottom:15px ;
  max-height: 550px;
+ max-width: 80%;
+ 
 }
     
  
@@ -39,7 +43,7 @@ margin: 15px;
    padding: 5px 20px 5px 20px;
     align-items: center;
    background-color:var(--bg-banner);
-    margin:20px;
+    margin:30px;
    border-radius: 10px;
    color: var(--color-body);
    border: 1px solid var(--color-border);
@@ -105,6 +109,13 @@ margin: 15px;
 
   
 @media screen and (min-height: 638px) and (min-width: 800px){
+
+  .skillsContainer__hardSkills ul{
+   max-width: 100%;
+   
+  }
+      
+
   .skillsContainer{
     padding: 5%;
     min-height: 1vh;
